# zenjin

./: .id.z  meson.build
include/: config.hpp  entity.hpp  states.hpp  zenjin.hpp
src/: entity.cpp  main.cpp  states.cpp
